--- a/styling/styles.css
+++ b/styling/styles.css
@@ -24,6 +24,7 @@
 .banner-description {
     width: 380px;
     padding: 35px;
+    margin-right: 50px;
 
 }
 
@@ -47,6 +48,8 @@
 .btn-style {
     font-weight: 600px;
     font-size: 20px;
+    width: 160px;
+    height: 64px;
     padding: 18px 20px;
     margin-top: 30px;
     border-radius: 8px;
@@ -69,9 +72,9 @@ main {
 }
 
 .person-img {
-    background-image: url('../images/gradient2.png'),
+    /* background-image: url('../images/gradient2.png'),
         linear-gradient(rgba(192, 37, 37, 0.418), rgba(145, 18, 18, 0.5));
-    background-blend-mode: overlay;
+    background-blend-mode: overlay; */
 
 }
 
@@ -101,6 +104,7 @@ ul {
 ul li:before {
     content: '✓';
     color: aqua;
+    margin-right: 10px;
 }
 
 .some-motivation-point {
@@ -115,7 +119,7 @@ ul li:before {
     font-size: 40px;
     color: #151414;
     text-align: center;
-    margin-top: 100px;
+    margin-top:135px;
     margin-bottom: 100px;
 
 }
@@ -125,7 +129,6 @@ ul li:before {
     justify-content: space-between;
     align-items: center;
     margin-top: 110px;
-    margin-bottom: ;
 }
 
 .i-will-do {
@@ -157,8 +160,10 @@ ul li:before {
 .contact-btn {
     padding: 20px;
     font-weight: 600;
+    width: 160px;
+    height: 64px;
     font-size: 20px;
-    color: #F15B22;
+    color: #005FAC;
     background-color: white;
     border-radius: 5px;
     border: none;
@@ -168,29 +173,38 @@ ul li:before {
 }
 
 .contact-section {
-    background-image: url('../images/watch.png');
-
+    background-image: linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%), url('../images/watch.png');
+    /* background-blend-mode:overlay; */
     border-radius: 8px;
     margin-bottom: 50px;
 }
 
 /* footer setion */
-.footer-section {
-    display: flex;
+.footer-head {
+    
     width: 100%;
-    height: 100vh;
-    background-color: rgb(156, 108, 108);
-    justify-content: center;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 130px;
+    height: 100vh; 
+    background: #151414;
+    margin-top: 135px;
+}
+
+.footer-section {
+     display: flex;
+     width: 100%;
+     height: 100vh;
+     justify-content: space-around;
+     align-items: center;
+     margin: 0 auto;
+     margin-top: 130px;
 
 
 }
 
+
 .fb-twiter-youtube {
     display: flex;
     margin-top: 60px;
+    margin-right: 30px;
 }
 
 .footer-Title {
@@ -228,7 +242,9 @@ ul li:before {
     height: 25px;
     font-weight: 400px;
 }
-
+.footer-section-info{
+    margin-left: 30px;
+}
 .form-title {
     margin-bottom: 35px;
     width: 123px;
@@ -241,7 +257,7 @@ ul li:before {
 
 .email-adj {
     width: 240px;
-    height:50px;
+    height: 50px;
     padding-left: 18px;
     margin-bottom: 24px;
     color: #F3F3F3;
@@ -249,11 +265,13 @@ ul li:before {
     border-radius: 8px;
     border: none;
 }
-.btn-subscribe{
+
+.btn-subscribe {
     padding: 20px;
     width: 130px;
     border-radius: 8px;
     color: #FFFFFF;
+    font-size: 20px;
     background-color: blue;
     border: none;
 }
