--- a/styling/styles.css
+++ b/styling/styles.css
@@ -16,7 +16,7 @@
     height: 100vh;
     width: 100%;
     display: flex;
-    margin: auto;
+    margin : 0 auto;
     justify-content: right;
     align-items: center;
 }
@@ -246,7 +246,13 @@ ul li:before {
    padding-right:16px;
 }
 .footer-section-info{
-    margin-left: 30px;
+    margin-left: 220px;
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+.form{
+    margin-right: 230px;
+    margin-bottom: 65px;
 }
 .form-title {
     margin-bottom: 35px;
