--- a/styling/styles.css
+++ b/styling/styles.css
@@ -7,6 +7,7 @@
 
 /* header  & banneer section styles */
 .header {
+    height: 1100px;
     background-image: url('../images/banner/banner2.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -16,15 +17,17 @@
     height: 100vh;
     width: 100%;
     display: flex;
-    margin : 0 auto;
+    margin: 0 auto;
+    padding-top: 360px;
     justify-content: right;
     align-items: center;
 }
 
 .banner-description {
-    width: 380px;
-    padding: 35px;
-    margin-right: 50px;
+    height: 95vh;
+    width: 460px;
+    margin-right: 115px;
+    margin-bottom: 160px;
 
 }
 
@@ -32,6 +35,7 @@
 
     font-weight: 700;
     font-size: 65px;
+    text-align: justify;
     color: #151414;
 
 }
@@ -119,7 +123,7 @@ ul li:before {
     font-size: 40px;
     color: #151414;
     text-align: center;
-    margin-top:135px;
+    margin-top: 135px;
     margin-bottom: 100px;
 
 }
@@ -181,21 +185,19 @@ ul li:before {
 
 /* footer setion */
 .footer-head {
-    
+
     width: 100%;
-    height: 100vh; 
+    height: 600px;
     background: #151414;
-    margin-top: 135px;
 }
 
 .footer-section {
-     display: flex;
-     width: 100%;
-     height: 100vh;
-     justify-content: space-around;
-     align-items: center;
-     margin: 0 auto;
-     margin-top: 130px;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 130px;
 
 
 }
@@ -242,18 +244,24 @@ ul li:before {
     height: 25px;
     font-weight: 400px;
 }
-.icon{
-   padding-right:16px;
+
+.icon {
+    padding-right: 16px;
 }
-.footer-section-info{
+
+.footer-section-info {
     margin-left: 220px;
-    margin-top: 130px;
-    margin-bottom: 130px;
+    margin-top:125px;
+    height: 500px;
 }
-.form{
+
+.form {
     margin-right: 230px;
     margin-bottom: 65px;
+    margin-top:75px;
+    height: 355px;
 }
+
 .form-title {
     margin-bottom: 35px;
     width: 123px;
